--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,14 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'webgoatdevsecops'
+    scannerMode: 'MSBuild'
+    projectKey: 'webg0at'
+    projectName: 'webgoatdevsecops'
+
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
@@ -33,3 +41,9 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
     otherConsoleOptions: '/Framework:.NETFramework,Version=v4.7.2'
+
+- task: SonarCloudAnalyze@1
+
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
